<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Calculator</string>
    <string name="sum">Sum</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiply">Multiply</string>
    <string name="division">Division</string>
    <string name="operations">Operations</string>
    <string name="compute">compute</string>
    <string name="result_format">Result: %.2f</string>
    <string name="operand_hint">Operand</string>
    <string name="msg_illegal_operation">Choose operation</string>
    <string name="msg_illegal_operand">Illegal operands</string>
    <string name="msg_operator_not_select">Select operator</string>
</resources>
