<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CalculatorActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/operand1"
            style="@style/Widget.Calculator.Operand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/operand2"
            style="@style/Widget.Calculator.Operand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>


    <RadioGroup
        android:id="@+id/operators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checkedButton="@+id/operator_sum"
        >

        <RadioButton
            android:id="@+id/operator_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sum"
            />

        <RadioButton
            android:id="@+id/operator_subtraction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtraction"
            />

        <RadioButton
            android:id="@+id/operator_multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            />

        <RadioButton
            android:id="@+id/operator_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/division"
            />

    </RadioGroup>

    <Button
        android:id="@+id/compute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        />

    <TextView
        android:id="@+id/result"
        style="@style/Widget.Calculator.Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/result_format"
        />

</LinearLayout>